# ssafer-cli

./: .gitignore  README.md  pyproject.toml
sample-project/: .env  docker-compose.yml
ssafer/: __main__.py  main.py
ssafer/core/: compose.py  constants.py  doctor.py  env_parser.py  finder.py  hashing.py  result_store.py  sanitize.py  trivy.py  upload.py
tests/: test_compose_sets.py  test_env_parser.py  test_sanitize.py  test_trivy.py  test_upload.py
